# vrep-ros-practice

./: README.md  demo.ttt  hector.rviz
ball_follower/: CMakeLists.txt  package.xml
ball_follower/include/: pid.h
ball_follower/launch/: ball_follower.launch
ball_follower/src/: visual_servo_node.cpp
demo/: CMakeLists.txt  demo.ttt  package.xml
demo/launch/: final.launch  hector.launch  tracking_and_detect.launch
demo/rviz/: final.rviz  frames.gv  hector.gv  hector.rviz
flip_image/: CMakeLists.txt  package.xml
flip_image/launch/: final.launch
flip_image/src/: flip_image_node.cpp
image_recognition/: CMakeLists.txt  package.xml
image_recognition/src/: image_recognition.cpp  image_recognition_node.cpp  template_matching.h
